// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsScreen should render correctly with accounts 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <Component
    accounts={
      Array [
        Object {
          "balance": 21,
          "id": "test",
          "name": "Account name",
        },
      ]
    }
  />
</NativeBaseProvider>
`;

exports[`AccountsScreen should render correctly with no accounts 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <Component
    accounts={Array []}
  />
</NativeBaseProvider>
`;
